--- a/config/userQuery.conf
+++ b/config/userQuery.conf
@@ -38,4 +38,4 @@ PORT =LOCAL_PORT
 NUM = THREADS
 
 [QUERYAPIS]
-URLS=210.14.129.121:8443,/openapi/api/searchreport?,330000,cmc,3000000000;
+URLS=117.34.109.32:80,1001,330000,cmc,3000000000;61.151.247.36:9099,1002,320000,cmc,3000000000;
